syntax = "proto2";
package buffer;

//获取pve关卡信息
message CGPveCityUnlockProto {
  optional int32 msgType	= 1[default = 7012];//协议号
  optional int32 cityId		= 2; // 所选城市id
  optional int32 pveId		= 3; // 当前景点id
}